@@ -186,6 +186,12 @@ and :func:`unicodedata.lookup()` resolves named sequences too.
 (Contributed by Ezio Melotti in :issue:`12753`)
 
 
+Equality comparisons on :func:`range` objects now return a result reflecting
+the equality of the underlying sequences generated by those range objects.
+
+(:issue:`13021`)
+
+
 New, Improved, and Deprecated Modules
 =====================================
 
